--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://prasanth123456-boo.github.io/CEDAR",
   "name": "cedar",
   "private": true,
   "version": "0.0.0",
@@ -20,12 +21,14 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
+    "framer-motion": "^12.23.6",
     "gsap": "^3.12.7",
     "motion": "^12.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
